[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/terrain/Terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/world/Sky.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/world/Mountains.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/world/Building.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/world/world.gd" type="Script" id=5]
[ext_resource path="res://scripts/world/underworld.gd" type="Script" id=6]
[ext_resource path="res://scripts/world/backdrop.gd" type="Script" id=7]
[ext_resource path="res://scripts/world/loading_screen.gd" type="Script" id=8]
[ext_resource path="res://scripts/world/transmission_screen.gd" type="Script" id=9]
[ext_resource path="res://assets/fonts/m5x7.fnt" type="BitmapFont" id=10]
[ext_resource path="res://scripts/world/fuel_station_screen.gd" type="Script" id=11]
[ext_resource path="res://scripts/world/mineral_processing_screen.gd" type="Script" id=12]
[ext_resource path="res://scripts/world/upgrades_screen.gd" type="Script" id=13]
[ext_resource path="res://assets/images/caret.png" type="Texture" id=14]
[ext_resource path="res://scripts/world/item_shop_screen.gd" type="Script" id=15]
[ext_resource path="res://scripts/world/save_screen.gd" type="Script" id=16]
[ext_resource path="res://assets/music/main_music.ogg" type="AudioStream" id=17]
[ext_resource path="res://assets/music/building_music.ogg" type="AudioStream" id=18]
[ext_resource path="res://assets/music/transmission_music.ogg" type="AudioStream" id=19]

[node name="World" type="Node"]
script = ExtResource( 5 )

[node name="Overworld" type="Node2D" parent="."]

[node name="Sky" parent="Overworld" instance=ExtResource( 2 )]
position = Vector2( 480, 0 )
z_index = -2

[node name="Mountains" parent="Overworld" instance=ExtResource( 3 )]

[node name="FuelStationBuilding" parent="Overworld" instance=ExtResource( 4 )]
position = Vector2( 128, 0 )
world_open_method = "enter_fuel_station"
building_texture_path = "res://assets/images/gas_pump.png"
building_texture_pos = Vector2( -40, -47 )

[node name="MineralProcessingBuilding" parent="Overworld" instance=ExtResource( 4 )]
position = Vector2( 448, 0 )
world_open_method = "enter_mineral_processing"
building_texture_path = "res://assets/images/mineral_processing.png"
building_texture_pos = Vector2( -32, -34 )
enter_text_height = -48

[node name="UpgradesBuilding" parent="Overworld" instance=ExtResource( 4 )]
position = Vector2( 704, 0 )
world_open_method = "enter_upgrades"
building_texture_path = "res://assets/images/upgrades.png"
building_texture_pos = Vector2( -32, -48 )
enter_text_height = -74

[node name="ItemShopBuilding" parent="Overworld" instance=ExtResource( 4 )]
position = Vector2( 832, 0 )
world_open_method = "enter_item_shop"
building_texture_path = "res://assets/images/item_shop.png"
building_texture_pos = Vector2( -32, -48 )
enter_text_height = -70

[node name="SaveBuilding" parent="Overworld" instance=ExtResource( 4 )]
position = Vector2( 512, 0 )
world_open_method = "enter_save"
building_texture_path = "res://assets/images/pole.png"
building_texture_pos = Vector2( -8, -80 )
enter_text_height = -96

[node name="Terrain" parent="." instance=ExtResource( 1 )]
z_index = 1

[node name="Underworld" type="Node2D" parent="."]
z_index = 2
script = ExtResource( 6 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="Loading" type="Node2D" parent="UI"]
z_index = 10
script = ExtResource( 8 )

[node name="Backdrop" type="Node2D" parent="UI"]
pause_mode = 2
z_index = -1
script = ExtResource( 7 )

[node name="Transmission" type="Node2D" parent="UI"]
pause_mode = 2
script = ExtResource( 9 )

[node name="FuelStation" type="Node2D" parent="UI"]
pause_mode = 2
script = ExtResource( 11 )

[node name="Title" type="Label" parent="UI/FuelStation"]
margin_right = 320.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "Fuel Station"
align = 1
valign = 1

[node name="Money" type="Label" parent="UI/FuelStation"]
margin_left = -3.0
margin_right = 317.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "$0"
align = 2
valign = 1

[node name="MineralProcessing" type="Node2D" parent="UI"]
pause_mode = 2
script = ExtResource( 12 )

[node name="Title" type="Label" parent="UI/MineralProcessing"]
margin_right = 320.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "Mineral Processing"
align = 1
valign = 1

[node name="Money" type="Label" parent="UI/MineralProcessing"]
margin_left = -3.0
margin_right = 317.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "$0"
align = 2
valign = 1

[node name="Upgrades" type="Node2D" parent="UI"]
pause_mode = 2
script = ExtResource( 13 )

[node name="Title" type="Label" parent="UI/Upgrades"]
margin_right = 320.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "Upgrades"
align = 1
valign = 1

[node name="Tabs" type="Label" parent="UI/Upgrades"]
margin_top = 14.0
margin_right = 320.0
margin_bottom = 28.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "tags"
align = 1
valign = 1

[node name="CaretRight" type="Sprite" parent="UI/Upgrades"]
position = Vector2( 200, 22 )
texture = ExtResource( 14 )

[node name="CaretLeft" type="Sprite" parent="UI/Upgrades"]
position = Vector2( 120, 22 )
texture = ExtResource( 14 )
flip_h = true

[node name="Money" type="Label" parent="UI/Upgrades"]
margin_left = -3.0
margin_right = 317.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "$0"
align = 2
valign = 1

[node name="ItemShop" type="Node2D" parent="UI"]
pause_mode = 2
script = ExtResource( 15 )

[node name="Title" type="Label" parent="UI/ItemShop"]
margin_right = 320.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "Item Shop"
align = 1
valign = 1

[node name="Tabs" type="Label" parent="UI/ItemShop"]
margin_top = 14.0
margin_right = 320.0
margin_bottom = 28.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
align = 1
valign = 1

[node name="CaretRight" type="Sprite" parent="UI/ItemShop"]
position = Vector2( 200, 22 )
texture = ExtResource( 14 )

[node name="CaretLeft" type="Sprite" parent="UI/ItemShop"]
position = Vector2( 120, 22 )
texture = ExtResource( 14 )
flip_h = true

[node name="Description" type="Label" parent="UI/ItemShop"]
margin_left = 8.0
margin_top = 148.0
margin_right = 328.0
margin_bottom = 212.0
rect_min_size = Vector2( 320, 64 )
custom_fonts/font = ExtResource( 10 )
valign = 1

[node name="Money" type="Label" parent="UI/ItemShop"]
margin_left = -3.0
margin_right = 317.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "$0"
align = 2
valign = 1

[node name="Save" type="Node2D" parent="UI"]
pause_mode = 2
script = ExtResource( 16 )

[node name="Title" type="Label" parent="UI/Save"]
margin_right = 320.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 14 )
custom_fonts/font = ExtResource( 10 )
text = "Save Game"
align = 1
valign = 1

[node name="Warning" type="Label" parent="UI/Save"]
margin_left = 8.0
margin_top = 32.0
margin_right = 312.0
margin_bottom = 96.0
rect_min_size = Vector2( 304, 64 )
custom_fonts/font = ExtResource( 10 )
align = 1
valign = 1
autowrap = true

[node name="InitialTransmissionTimer" type="Timer" parent="."]
one_shot = true

[node name="BuildingMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 18 )
volume_db = -8.0
bus = "Music"

[node name="TransmissionMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 19 )
volume_db = -12.0
bus = "Music"

[node name="GameMusic" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 17 )
volume_db = 4.0
bus = "Music"
